# scrapper-cp

./: .env  .gitignore  README.md  pyproject.toml
src/: football_extractor.py  main.py  manager.py  sheet_feeder.py
src/scrappers/: __init__.py  base.py  instahyre_scrapper.py  ycombinator_scrapper.py
src/utils/: __init__.py  util.py
src/writer/: __init__.py  jsonl_writer.py
