[project]
name = "cp-scrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhishek Mishra",email = "sumitmm9506555798@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
